[project]
name = "dutyy"
version = "0.1.0"
description = "cli to manage to-dos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiosqlite==0.22.1",
  "click==8.3.1",
  "platformdirs==4.9.4",
  "pytest==9.0.2",
  "sqlalchemy[asyncio]==2.0.48",
]
[project.scripts]
dutyy = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "main.py"]
