[project]
name = "dutyy"
version = "0.1.0"
authors = [{ name = "Elvin Salcedo", email = "elvin.salcedo17@gmail.com" }]
description = "cli to manage to-dos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiosqlite==0.22.1",
  "click==8.3.1",
  "platformdirs==4.9.4",
  "pytest==9.0.3",
  "sqlalchemy[asyncio]==2.0.48",
]

[tool.uv]
exclude-newer = "1 week"

[project.scripts]
dutyy = "src.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "main.py"]
